# vendor

./: .gitignore  .gitmodules  LICENSE  README.md
libmodbus/: BUILD.bazel
mbedtls/: BUILD.bazel
open62541/: BUILD.bazel  abc.txt
