load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "open62541_sources",
    srcs = glob(["open62541/**"]),
)

cmake(
    name = "open62541_cmake",
    lib_source = ":open62541_sources",
    out_static_libs = select({
        "@platforms//os:windows": ["open62541.lib"],
        "//conditions:default": ["libopen62541.a"],
    }),
    generate_args = select({
        "@platforms//os:windows": [
            "-DCMAKE_BUILD_TYPE=RelWithDebInfo",
            "-DUA_NAMESPACE_ZERO=FULL",
            "-DUA_ENABLE_ENCRYPTION=MBEDTLS",
            "-DMBEDTLS_LIBRARY=C:\\Program Files (x86)\\Mbed TLS\\lib\\mbedtls.lib",
            "-DMBEDX509_LIBRARY=C:\\Program Files (x86)\\Mbed TLS\\lib\\mbedx509.lib",
            "-DMBEDCRYPTO_LIBRARY=C:\\Program Files (x86)\\Mbed TLS\\lib\\mbedcrypto.lib",
            "-DMBEDTLS_INCLUDE_DIRS=C:\\Program Files (x86)\\Mbed TLS\\include",
            "-DCMAKE_OSX_ARCHITECTURES=x86_64",
        ],
        "//conditions:default": [
            "-DCMAKE_BUILD_TYPE=RelWithDebInfo",
            "-DUA_NAMESPACE_ZERO=FULL",
            "-DUA_ENABLE_ENCRYPTION=MBEDTLS",
        ],
    }),
)

cc_library(
    name = "open62541",
    deps = [
        ":open62541_cmake",
        "//vendor/mbedtls",
    ],
    visibility = ["//visibility:public"],
)